--- a/index.html
+++ b/index.html
@@ -1,7 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deep Learning Mathematics and AI-Driven Mathematical Research - [Your Name]'s Notes</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .intro {
+            background-color: #f7f9fc;
+            border-left: 4px solid #3498db;
+            padding: 15px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1> Mathematics of Deep Learning and LLM-Driven Mathematical Research</h1>
+        <p class="intro">Welcome to my research repository. Here, I explore the mathematical structures underlying deep learning and investigate how LLM can be leveraged to advance mathematical research.</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>Overview</h2>
+            <p>As a mahematician, I am fascinated by the intricate mathematical foundations of deep learning and the potential of AI to revolutionize mathematical discovery. My work focuses on two main areas:</p>
+            <ol>
+                <li>Uncovering and analyzing the mathematical structures that underpin deep learning algorithms.</li>
+                <li>Exploring innovative ways to use AI, particularly large language models (LLMs), as tools for mathematical research and problem-solving.</li>
+            </ol>
+        </section>
+
+        <section>
+            <h2>Research Interests</h2>
+            <ul>
+                <li>Topological and geometric aspects of neural networks</li>
+                <li>AI-assisted theorem proving and conjecture generation</li>
+                <li>Mathematical reasoning capabilities of LLMs</li>
+                <li>AIMO</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Latest Notes</h2>
+            <p>I will regularly update this page with notes on the mathematics of deep learning and AI-driven mathematical research. Recent entries include:</p>
+    
+            </ul>
+        </section>
+
 </body>
 </html>
